some home changes

--- a/css/style.css
+++ b/css/style.css
@@ -535,8 +535,10 @@ body.light hr.separator {
   top: -50%;
 }
 
-.home .bg {
-  background-image: url(../img/hakaale.jpg);
+/* .home .bg {
+  
+} */
+.card{
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
@@ -545,7 +547,18 @@ body.light hr.separator {
   border-radius: 30px;
   left: 40px;
   top: 40px;
-  box-shadow: 0 0 7px rgba(0,0,0,.9);
+  box-shadow: 0 0 7px rgba(0,0,0,.9)
+}
+.home .bg-now {
+  /* background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+  height: calc(100vh - 80px);
+  z-index: 111;
+  border-radius: 30px;
+  left: 40px;
+  top: 40px;
+  box-shadow: 0 0 7px rgba(0,0,0,.9); */
 }
 
 .home .container-home {
